force-app/main/default/objects/OpportunityLineItem/fields/Chasis_facturado__c.field-meta.xml
<CustomField>
    <fullName>Chasis_facturado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chasis facturado</label>
    <type>Checkbox</type>
</CustomField>