force-app/main/default/objects/OpportunityLineItem/fields/Descuento__c.field-meta.xml
<CustomField>
    <fullName>Descuento__c</fullName>
    <formula>UnitPrice -  Subtotal__c -  Imp_Aduanas__c -  IVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>