force-app/main/default/objects/OpportunityLineItem/fields/Fecha_de_asignacion_chasis__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_asignacion_chasis__c</fullName>
    <description>Almacenará la fecha en la que se asignará un chasis</description>
    <label>Fecha de asignación chasis</label>
    <type>Date</type>
</CustomField>