force-app/main/default/objects/OpportunityLineItem/fields/Hoja_de_negociacion__c.field-meta.xml
<CustomField>
    <fullName>Hoja_de_negociacion__c</fullName>
    <displayFormat>{000000000}</displayFormat>
    <label>Hoja de negociación</label>
    <type>AutoNumber</type>
</CustomField>