force-app/main/default/objects/OpportunityLineItem/fields/Id_de_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Id_de_oportunidad__c</fullName>
    <formula>Opportunity.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id de oportunidad</label>
    <type>Text</type>
</CustomField>