force-app/main/default/objects/OpportunityLineItem/fields/IdInformeNegociacion__c.field-meta.xml
<CustomField>
    <fullName>IdInformeNegociacion__c</fullName>
    <label>IdInformeNegociacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>