force-app/main/default/objects/OpportunityLineItem/fields/Imp_Aduanas__c.field-meta.xml
<CustomField>
    <fullName>Imp_Aduanas__c</fullName>
    <label>Impuesto aduanero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>