force-app/main/default/objects/OpportunityLineItem/fields/IVA__c.field-meta.xml
<CustomField>
    <fullName>IVA__c</fullName>
    <formula>IF( X15_I_V_A__c,  UnitPrice * 0.15 ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>