force-app/main/default/objects/OpportunityLineItem/fields/Monto_IVA__c.field-meta.xml
<CustomField>
    <fullName>Monto_IVA__c</fullName>
    <label>Monto IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>