force-app/main/default/objects/OpportunityLineItem/fields/Oportunidad_APV_generada__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_APV_generada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oportunidad APV generada</label>
    <type>Checkbox</type>
</CustomField>