force-app/main/default/objects/OpportunityLineItem/fields/Precio_cambi__c.field-meta.xml
<CustomField>
    <fullName>Precio_cambi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Precio cambió</label>
    <type>Checkbox</type>
</CustomField>