force-app/main/default/objects/OpportunityLineItem/fields/Prima__c.field-meta.xml
<CustomField>
    <fullName>Prima__c</fullName>
    <label>Prima</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>