force-app/main/default/objects/OpportunityLineItem/fields/Tipo_de_reserva__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_reserva__c</fullName>
    <label>Tipo de reserva</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nueva</fullName>
            </value>
            <value>
                <fullName>Devolucion</fullName>
            </value>
            <value>
                <fullName>Cambio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>