force-app/main/default/objects/OpportunityLineItem/fields/Total_test__c.field-meta.xml
<CustomField>
    <fullName>Total_test__c</fullName>
    <label>Total test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>