force-app/main/default/objects/OpportunityLineItem/fields/X15_I_V_A__c.field-meta.xml
<CustomField>
    <fullName>X15_I_V_A__c</fullName>
    <defaultValue>true</defaultValue>
    <label>El cliente paga IVA?</label>
    <type>Checkbox</type>
</CustomField>